# src/app/api/auth/sign-in/confirmed/route.ts
@@ -1,4 +1,0 @@
-import { AuthController } from "@/app/api/_controllers/auth";
-import { Route } from "@/lib/server/route";
-
-export default Route.create({ POST: AuthController.signinByConfirm });
